--- a/aimediaflow-landing.html
+++ b/aimediaflow-landing.html
@@ -16,6 +16,9 @@
     --amber: #e63946;
     --amber-bright: #ff4d5a;
     --amber-dim: #7a1c23;
+    --cyan: #00c8e0;
+    --cyan-bright: #4de0f4;
+    --cyan-dim: rgba(0,200,224,0.15);
     --white: #f0f4f8;
     --muted: #4a5568;
     --grid-color: rgba(230, 57, 70, 0.03);
@@ -181,7 +184,7 @@
     font-size: 0.68rem;
     letter-spacing: 0.28em;
     text-transform: uppercase;
-    color: var(--amber);
+    color: var(--cyan);
     margin-bottom: 28px;
     display: flex;
     align-items: center;
@@ -193,7 +196,7 @@
     content: '';
     display: inline-block;
     width: 36px; height: 1px;
-    background: var(--amber);
+    background: var(--cyan);
   }
 
   .hero-title {
@@ -206,7 +209,7 @@
     opacity: 0;
     animation: fadeUp 0.8s ease forwards 0.4s;
   }
-  .hero-title .accent { color: var(--amber); display: block; }
+  .hero-title .accent { color: var(--cyan); display: block; }
 
   .hero-sub {
     font-size: 1rem;
@@ -269,7 +272,7 @@
     text-decoration: none;
     display: inline-block;
   }
-  .btn-ghost:hover { border-color: var(--amber); color: var(--amber); }
+  .btn-ghost:hover { border-color: var(--cyan); color: var(--cyan); }
 
   /* Hero visual */
   .hero-visual {
@@ -311,7 +314,7 @@
   .sphere-ring {
     position: absolute;
     border-radius: 50%;
-    border: 1px solid rgba(59,130,246,0.2);
+    border: 1px solid rgba(0,200,224,0.25);
     animation: ring-expand 2.5s ease-out infinite;
   }
   .sphere-ring:nth-child(1) { width: 120px; height: 120px; animation-delay: 0s; }
@@ -322,20 +325,20 @@
     100% { transform: scale(1.9); opacity: 0; }
   }
 
-  /* The sphere itself — IDLE: blue */
+  /* The sphere itself — IDLE: cyan */
   .ai-sphere {
     width: 72px;
     height: 72px;
     border-radius: 50%;
     background: radial-gradient(circle at 35% 35%,
-      rgba(147,197,253,0.95) 0%,
-      rgba(59,130,246,0.85) 40%,
-      rgba(20,60,140,0.7) 100%
+      rgba(77,224,244,0.95) 0%,
+      rgba(0,200,224,0.85) 40%,
+      rgba(0,80,100,0.7) 100%
     );
     box-shadow:
-      0 0 30px rgba(59,130,246,0.7),
-      0 0 60px rgba(59,130,246,0.28),
-      inset 0 0 20px rgba(147,197,253,0.25);
+      0 0 30px rgba(0,200,224,0.7),
+      0 0 60px rgba(0,200,224,0.28),
+      inset 0 0 20px rgba(77,224,244,0.25);
     position: relative;
     z-index: 2;
     transition:
@@ -412,13 +415,13 @@
     height: 26px;
     border-radius: 50%;
     background: radial-gradient(circle at 35% 35%,
-      rgba(147,197,253,0.95) 0%,
-      rgba(59,130,246,0.85) 40%,
-      rgba(20,60,140,0.7) 100%
+      rgba(77,224,244,0.95) 0%,
+      rgba(0,200,224,0.85) 40%,
+      rgba(0,80,100,0.7) 100%
     );
     box-shadow:
-      0 0 10px rgba(59,130,246,0.8),
-      0 0 20px rgba(59,130,246,0.3);
+      0 0 10px rgba(0,200,224,0.8),
+      0 0 20px rgba(0,200,224,0.3);
     position: relative;
     transition: background 0.5s ease, box-shadow 0.5s ease;
     animation: sphere-breathe 3s ease-in-out infinite;
@@ -467,11 +470,11 @@
   .sphere-state-label .slabel-dot {
     width: 5px; height: 5px;
     border-radius: 50%;
-    background: rgba(59,130,246,1);
+    background: rgba(0,200,224,1);
     transition: background 0.4s;
   }
-  .sphere-state-label.idle { color: rgba(59,130,246,0.85); }
-  .sphere-state-label.idle .slabel-dot { background: rgba(59,130,246,1); }
+  .sphere-state-label.idle { color: rgba(0,200,224,0.9); }
+  .sphere-state-label.idle .slabel-dot { background: rgba(0,200,224,1); }
   .sphere-state-label.thinking { color: rgba(245,158,11,0.9); }
   .sphere-state-label.thinking .slabel-dot { background: rgba(245,158,11,1); }
   .sphere-state-label.speaking { color: rgba(34,197,94,0.9); }
@@ -524,7 +527,7 @@
   .bot-avatar {
     width: 38px; height: 38px;
     background: var(--surface);
-    border: 2px solid var(--amber);
+    border: 2px solid var(--cyan);
     border-radius: 50%;
     display: flex; align-items: center; justify-content: center;
     position: relative;
@@ -565,7 +568,7 @@
     position: absolute;
     inset: -5px;
     border-radius: 50%;
-    border: 1px solid var(--amber);
+    border: 1px solid var(--cyan);
     opacity: 0;
     animation: avatar-pulse 2.5s ease-out infinite;
   }
@@ -820,7 +823,7 @@
     align-items: center;
     gap: 12px;
   }
-  .section-tag::before { content:''; display:inline-block; width:26px; height:1px; background:var(--amber); }
+  .section-tag::before { content:''; display:inline-block; width:26px; height:1px; background:var(--cyan); }
   .section-title {
     font-family: 'Bebas Neue', sans-serif;
     font-size: clamp(3rem, 5vw, 5.5rem);
@@ -829,7 +832,7 @@
     color: var(--white);
     max-width: 700px;
   }
-  .section-title em { font-style:normal; color:var(--amber); }
+  .section-title em { font-style:normal; color:var(--cyan); }
 
   .services-grid {
     display: grid;
@@ -851,7 +854,7 @@
     position: absolute;
     top: 0; left: 0;
     width: 100%; height: 2px;
-    background: var(--amber);
+    background: var(--cyan);
     transform: scaleX(0);
     transform-origin: left;
     transition: transform 0.4s ease;
@@ -861,8 +864,8 @@
 
   .service-icon {
     width: 54px; height: 54px;
-    background: rgba(245,158,11,0.07);
-    border: 1px solid rgba(245,158,11,0.18);
+    background: rgba(0,200,224,0.07);
+    border: 1px solid rgba(0,200,224,0.18);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -870,7 +873,7 @@
     margin-bottom: 28px;
     transition: background 0.3s, border-color 0.3s;
   }
-  .service-card:hover .service-icon { background: rgba(245,158,11,0.14); border-color: var(--amber); }
+  .service-card:hover .service-icon { background: rgba(0,200,224,0.14); border-color: var(--cyan); }
 
   .service-num {
     font-family: 'DM Mono', monospace;
@@ -896,7 +899,7 @@
     font-family: 'DM Mono', monospace;
     font-size: 0.68rem;
     letter-spacing: 0.15em;
-    color: var(--amber);
+    color: var(--cyan);
     text-transform: uppercase;
     opacity: 0;
     transform: translateX(-10px);
@@ -935,7 +938,7 @@
     line-height: 1;
     transition: color 0.3s;
   }
-  .step:hover .step-num { color: var(--amber); }
+  .step:hover .step-num { color: var(--cyan); }
   .step-content h3 {
     font-family: 'Outfit', sans-serif;
     font-weight: 500;
@@ -967,16 +970,16 @@
   .terminal-title { margin:0 auto; font-size:0.62rem; color:var(--muted); letter-spacing:0.1em; }
   .terminal-body { padding:22px 20px; line-height:1.95; }
   .t-line { display:block; }
-  .t-prompt{color:var(--amber);}
+  .t-prompt{color:var(--cyan);}
   .t-cmd{color:#dedede;}
   .t-comment{color:#3d5068;}
   .t-success{color:#28c940;}
   .t-data{color:#60a5fa;}
-  .t-num{color:var(--amber);}
+  .t-num{color:var(--cyan);}
   .t-cursor {
     display:inline-block;
     width:7px; height:1.1em;
-    background:var(--amber);
+    background:var(--cyan);
     animation:blink 1s step-end infinite;
     vertical-align:middle;
   }
@@ -996,7 +999,7 @@
     padding: 38px;
     transition: border-color 0.3s, transform 0.3s;
   }
-  .proof-card:hover { border-color: rgba(245,158,11,0.28); transform: translateY(-4px); }
+  .proof-card:hover { border-color: rgba(0,200,224,0.28); transform: translateY(-4px); }
   .proof-quote {
     font-size: 0.88rem;
     color: #777;
@@ -1008,7 +1011,7 @@
     content: '"';
     font-family: 'Bebas Neue', sans-serif;
     font-size: 3.2rem;
-    color: var(--amber);
+    color: var(--cyan);
     line-height: 0;
     display: block;
     margin-bottom: 14px;
@@ -1021,7 +1024,7 @@
     display:flex; align-items:center; justify-content:center;
     font-family:'DM Mono',monospace;
     font-size:0.68rem;
-    color:var(--amber);
+    color:var(--cyan);
     flex-shrink:0;
   }
   .proof-name { font-size:0.8rem; font-weight:500; color:var(--white); }
@@ -1042,7 +1045,7 @@
     inset:0;
     background: radial-gradient(ellipse at 50% 60%, rgba(230,57,70,0.06) 0%, transparent 68%);
   }
-  .cta-label { font-family:'DM Mono',monospace; font-size:0.68rem; letter-spacing:0.3em; text-transform:uppercase; color:var(--amber); margin-bottom:28px; }
+  .cta-label { font-family:'DM Mono',monospace; font-size:0.68rem; letter-spacing:0.3em; text-transform:uppercase; color:var(--cyan); margin-bottom:28px; }
   .cta-title {
     font-family: 'Bebas Neue', sans-serif;
     font-size: clamp(4rem, 9vw, 10rem);
@@ -1052,7 +1055,7 @@
     margin-bottom: 48px;
     position:relative;
   }
-  .cta-title span { color:var(--amber); }
+  .cta-title span { color:var(--cyan); }
   .cta-sub { font-size:0.95rem; color:#5e5e5e; max-width:520px; margin:0 auto 48px; line-height:1.75; }
   .cta-actions { display:flex; gap:16px; justify-content:center; align-items:center; }
 
@@ -1068,7 +1071,7 @@
   .footer-copy { font-family:'DM Mono',monospace; font-size:0.62rem; color:var(--muted); letter-spacing:0.1em; }
   .footer-links { display:flex; gap:32px; }
   .footer-links a { font-family:'DM Mono',monospace; font-size:0.62rem; letter-spacing:0.12em; color:var(--muted); text-decoration:none; text-transform:uppercase; transition:color 0.2s; }
-  .footer-links a:hover { color:var(--amber); }
+  .footer-links a:hover { color:var(--cyan); }
 
   /* ── ANIMATIONS ── */
   @keyframes fadeUp { from{opacity:0;transform:translateY(28px);} to{opacity:1;transform:translateY(0);} }
@@ -1112,7 +1115,7 @@
 <nav>
   <a href="#" class="logo">
     <div class="logo-dot"></div>
-    AIMediaFlow
+    <span style="color:var(--amber)">AI</span>MediaFlow
   </a>
   <ul class="nav-links">
     <li><a href="#services">Services</a></li>
@@ -1425,7 +1428,7 @@
 
 <!-- FOOTER -->
 <footer>
-  <div class="footer-logo">AIMediaFlow</div>
+  <div class="footer-logo"><span style="color:var(--amber)">AI</span>MediaFlow</div>
   <div class="footer-copy">© 2026 AIMediaFlow. All rights reserved.</div>
   <div class="footer-links">
     <a href="#">Privacy</a>
